--- a/Views/AddService.xaml
+++ b/Views/AddService.xaml
@@ -5,6 +5,7 @@
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                  mc:Ignorable="d"
+                 WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen"
         Title="Қызмет қосу" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
