--- a/Views/Anketa.xaml
+++ b/Views/Anketa.xaml
@@ -298,7 +298,7 @@
                                 <Button Visibility="{Binding IsNotLivingAddressRegistration, Converter={StaticResource BooleanToVisibilityConverter}}" Grid.Column="2" Grid.Row="2" Content="Өзгерту" Command="{Binding AddLivingAddressCommand}"/>
                             </Grid>
                         </GroupBox>
-                        <GroupBox Header="">
+                        <GroupBox Header="Клиенттің байланыс мәліметтері">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="30*"/>
@@ -321,7 +321,7 @@
                                 <TextBox Text="{Binding Order.Client.SmsCode}" Grid.Column="1" Grid.Row="3"/>
                             </Grid>
                         </GroupBox>
-                        <GroupBox>
+                        <GroupBox Header="Клиенттің байланысушы адамы">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="40*"/>
@@ -350,6 +350,34 @@
                                 <TextBox Text="{Binding Order.Client.ContactPerson.PatronymicName}" Grid.Column="1" Grid.Row="3"/>
                                 <Label Content="Мобильді нөмер" Grid.Column="0" Grid.Row="4"/>
                                 <TextBox Text="{Binding Order.Client.ContactPerson.MobilePhone}" Grid.Column="1" Grid.Row="4"/>
+                            </Grid>
+                        </GroupBox>
+                        <GroupBox Header="Отбасы мәліметтері">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="40*"/>
+                                    <ColumnDefinition Width="60*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+                                <Label Content="Тұрмыс жағдайы" Grid.Column="0" Grid.Row="0"/>
+                                <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding FamilyStatuses}" SelectedItem="{Binding SelectedFamiltyStatus}" IsTextSearchEnabled="True">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <Label Content="{Binding Name}"></Label>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                                <Label Content="Қарауындағы адамдар саны" Grid.Column="0" Grid.Row="1"/>
+                                <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Order.Client.Family.DependantsCount}"/>
+                                <Label Content="Жылжымайтын мүлігі барма?" Grid.Column="0" Grid.Row="2"/>
+                                <CheckBox Grid.Column="1" Grid.Row="2" IsChecked="{Binding Order.Client.Family.HasRealProperty}"/>
+                                <Label Content="Жылжымалы мүлігі барма?" Grid.Column="0" Grid.Row="3"/>
+                                <CheckBox Grid.Column="1" Grid.Row="3" IsChecked="{Binding Order.Client.Family.HasMovableProperty}"/>
                             </Grid>
                         </GroupBox>
                     </StackPanel>
