--- a/Views/Anketa.xaml
+++ b/Views/Anketa.xaml
@@ -417,7 +417,8 @@
         </mah:MetroTabControl>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,40,0">
-            <Button Content="Ok" Margin="5" Height="30" Width="100" Command="{Binding OkCommand}"/>
+            <Button Content="Сақтау" Margin="5" Height="30" Width="100" Command="{Binding OkCommand}"/>
+            <Button Content="Ары қарай" Margin="5" Height="30" Width="100" Command="{Binding NextCommand}"/>
             <Button Click="ButtonBase_OnClick" Content="Болдырмау" Margin="5" Height="30" Width="100"/>
         </StackPanel>
     </Grid>
